cmake_minimum_required(VERSION 3.16)
project(pintos_project_3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(src)
include_directories(src/devices)
include_directories(src/examples)
include_directories(src/filesys)
include_directories(src/lib)
include_directories(src/lib/kernel)
include_directories(src/lib/user)
include_directories(src/misc)
include_directories(src/tests)
include_directories(src/tests/filesys)
include_directories(src/tests/filesys/base)
include_directories(src/tests/filesys/extended)
include_directories(src/tests/threads)
include_directories(src/tests/userprog)
include_directories(src/tests/vm)
include_directories(src/threads)
include_directories(src/userprog)
include_directories(src/utils)
include_directories(src/vm)

add_executable(pintos_project_3
        src/devices/block.c
        src/devices/block.h
        src/devices/ide.c
        src/devices/ide.h
        src/devices/input.c
        src/devices/input.h
        src/devices/intq.c
        src/devices/intq.h
        src/devices/kbd.c
        src/devices/kbd.h
        src/devices/partition.c
        src/devices/partition.h
        src/devices/pit.c
        src/devices/pit.h
        src/devices/rtc.c
        src/devices/rtc.h
        src/devices/serial.c
        src/devices/serial.h
        src/devices/shutdown.c
        src/devices/shutdown.h
        src/devices/speaker.c
        src/devices/speaker.h
        src/devices/timer.c
        src/devices/timer.h
        src/devices/vga.c
        src/devices/vga.h
        src/examples/bubsort.c
        src/examples/cat.c
        src/examples/cmp.c
        src/examples/cp.c
        src/examples/echo.c
        src/examples/halt.c
        src/examples/hex-dump.c
        src/examples/insult.c
        src/examples/lineup.c
        src/examples/ls.c
        src/examples/matmult.c
        src/examples/mcat.c
        src/examples/mcp.c
        src/examples/mkdir.c
        src/examples/pwd.c
        src/examples/recursor.c
        src/examples/rm.c
        src/examples/shell.c
        src/filesys/directory.c
        src/filesys/directory.h
        src/filesys/file.c
        src/filesys/file.h
        src/filesys/filesys.c
        src/filesys/filesys.h
        src/filesys/free-map.c
        src/filesys/free-map.h
        src/filesys/fsutil.c
        src/filesys/fsutil.h
        src/filesys/inode.c
        src/filesys/inode.h
        src/filesys/off_t.h
        src/lib/kernel/bitmap.c
        src/lib/kernel/bitmap.h
        src/lib/kernel/console.c
        src/lib/kernel/console.h
        src/lib/kernel/debug.c
        src/lib/kernel/hash.c
        src/lib/kernel/hash.h
        src/lib/kernel/list.c
        src/lib/kernel/list.h
        src/lib/kernel/stdio.h
        src/lib/user/console.c
        src/lib/user/debug.c
        src/lib/user/entry.c
        src/lib/user/stdio.h
        src/lib/user/syscall.c
        src/lib/user/syscall.h
        src/lib/arithmetic.c
        src/lib/ctype.h
        src/lib/debug.c
        src/lib/debug.h
        src/lib/inttypes.h
        src/lib/limits.h
        src/lib/packed.h
        src/lib/random.c
        src/lib/random.h
        src/lib/round.h
        src/lib/stdarg.h
        src/lib/stdbool.h
        src/lib/stddef.h
        src/lib/stdint.h
        src/lib/stdio.c
        src/lib/stdio.h
        src/lib/stdlib.c
        src/lib/stdlib.h
        src/lib/string.c
        src/lib/string.h
        src/lib/syscall-nr.h
        src/lib/ustar.c
        src/lib/ustar.h
        src/misc/.pintosrc
        src/misc/bochs-2.2.6-big-endian.patch
        src/misc/bochs-2.2.6-build.sh
        src/misc/bochs-2.2.6-gdbstub-ENN.patch
        src/misc/bochs-2.2.6-jitter.patch
        src/misc/bochs-2.2.6-ms-extensions.patch
        src/misc/bochs-2.2.6-namespace.patch
        src/misc/bochs-2.2.6-page-fault-segv.patch
        src/misc/bochs-2.2.6-paranoia.patch
        src/misc/bochs-2.2.6-solaris-link.patch
        src/misc/bochs-2.2.6-solaris-tty.patch
        src/misc/bochs-2.2.6-triple-fault.patch
        src/misc/bochs-2.6.2-build.sh
        src/misc/bochs-2.6.2-jitter-plus-segv.patch
        src/misc/bochs-2.6.2-xrandr-pkgconfig.patch
        src/misc/gcc-3.3.6-cross-howto
        src/misc/gdb-macros
        src/tests/filesys/base/child-syn-read.c
        src/tests/filesys/base/child-syn-wrt.c
        src/tests/filesys/base/lg-create.c
        src/tests/filesys/base/lg-full.c
        src/tests/filesys/base/lg-random.c
        src/tests/filesys/base/lg-seq-block.c
        src/tests/filesys/base/lg-seq-random.c
        src/tests/filesys/base/sm-create.c
        src/tests/filesys/base/sm-full.c
        src/tests/filesys/base/sm-random.c
        src/tests/filesys/base/sm-seq-block.c
        src/tests/filesys/base/sm-seq-random.c
        src/tests/filesys/base/syn-read.c
        src/tests/filesys/base/syn-read.h
        src/tests/filesys/base/syn-remove.c
        src/tests/filesys/base/syn-write.c
        src/tests/filesys/base/syn-write.h
        src/tests/filesys/extended/child-syn-rw.c
        src/tests/filesys/extended/dir-empty-name.c
        src/tests/filesys/extended/dir-mk-tree.c
        src/tests/filesys/extended/dir-mkdir.c
        src/tests/filesys/extended/dir-open.c
        src/tests/filesys/extended/dir-over-file.c
        src/tests/filesys/extended/dir-rm-cwd.c
        src/tests/filesys/extended/dir-rm-parent.c
        src/tests/filesys/extended/dir-rm-root.c
        src/tests/filesys/extended/dir-rm-tree.c
        src/tests/filesys/extended/dir-rmdir.c
        src/tests/filesys/extended/dir-under-file.c
        src/tests/filesys/extended/dir-vine.c
        src/tests/filesys/extended/grow-create.c
        src/tests/filesys/extended/grow-dir-lg.c
        src/tests/filesys/extended/grow-file-size.c
        src/tests/filesys/extended/grow-root-lg.c
        src/tests/filesys/extended/grow-root-sm.c
        src/tests/filesys/extended/grow-seq-lg.c
        src/tests/filesys/extended/grow-seq-sm.c
        src/tests/filesys/extended/grow-sparse.c
        src/tests/filesys/extended/grow-tell.c
        src/tests/filesys/extended/grow-two-files.c
        src/tests/filesys/extended/mk-tree.c
        src/tests/filesys/extended/mk-tree.h
        src/tests/filesys/extended/syn-rw.c
        src/tests/filesys/extended/syn-rw.h
        src/tests/filesys/extended/tar.c
        src/tests/filesys/seq-test.c
        src/tests/filesys/seq-test.h
        src/tests/internal/list.c
        src/tests/internal/stdio.c
        src/tests/internal/stdlib.c
        src/tests/threads/alarm-negative.c
        src/tests/threads/alarm-priority.c
        src/tests/threads/alarm-simultaneous.c
        src/tests/threads/alarm-wait.c
        src/tests/threads/alarm-zero.c
        src/tests/threads/mlfqs-block.c
        src/tests/threads/mlfqs-fair.c
        src/tests/threads/mlfqs-load-1.c
        src/tests/threads/mlfqs-load-60.c
        src/tests/threads/mlfqs-load-avg.c
        src/tests/threads/mlfqs-recent-1.c
        src/tests/threads/priority-change.c
        src/tests/threads/priority-condvar.c
        src/tests/threads/priority-donate-chain.c
        src/tests/threads/priority-donate-lower.c
        src/tests/threads/priority-donate-multiple.c
        src/tests/threads/priority-donate-multiple2.c
        src/tests/threads/priority-donate-nest.c
        src/tests/threads/priority-donate-one.c
        src/tests/threads/priority-donate-sema.c
        src/tests/threads/priority-fifo.c
        src/tests/threads/priority-preempt.c
        src/tests/threads/priority-sema.c
        src/tests/threads/tests.c
        src/tests/threads/tests.h
        src/tests/userprog/no-vm/multi-oom.c
        src/tests/userprog/args.c
        src/tests/userprog/bad-jump.c
        src/tests/userprog/bad-jump2.c
        src/tests/userprog/bad-read.c
        src/tests/userprog/bad-read2.c
        src/tests/userprog/bad-write.c
        src/tests/userprog/bad-write2.c
        src/tests/userprog/boundary.c
        src/tests/userprog/boundary.h
        src/tests/userprog/child-bad.c
        src/tests/userprog/child-close.c
        src/tests/userprog/child-rox.c
        src/tests/userprog/child-simple.c
        src/tests/userprog/close-bad-fd.c
        src/tests/userprog/close-normal.c
        src/tests/userprog/close-stdin.c
        src/tests/userprog/close-stdout.c
        src/tests/userprog/close-twice.c
        src/tests/userprog/create-bad-ptr.c
        src/tests/userprog/create-bound.c
        src/tests/userprog/create-empty.c
        src/tests/userprog/create-exists.c
        src/tests/userprog/create-long.c
        src/tests/userprog/create-normal.c
        src/tests/userprog/create-null.c
        src/tests/userprog/exec-arg.c
        src/tests/userprog/exec-bad-ptr.c
        src/tests/userprog/exec-missing.c
        src/tests/userprog/exec-multiple.c
        src/tests/userprog/exec-once.c
        src/tests/userprog/exit.c
        src/tests/userprog/halt.c
        src/tests/userprog/multi-child-fd.c
        src/tests/userprog/multi-recurse.c
        src/tests/userprog/open-bad-ptr.c
        src/tests/userprog/open-boundary.c
        src/tests/userprog/open-empty.c
        src/tests/userprog/open-missing.c
        src/tests/userprog/open-normal.c
        src/tests/userprog/open-null.c
        src/tests/userprog/open-twice.c
        src/tests/userprog/read-bad-fd.c
        src/tests/userprog/read-bad-ptr.c
        src/tests/userprog/read-boundary.c
        src/tests/userprog/read-normal.c
        src/tests/userprog/read-stdout.c
        src/tests/userprog/read-zero.c
        src/tests/userprog/rox-child.c
        src/tests/userprog/rox-multichild.c
        src/tests/userprog/rox-simple.c
        src/tests/userprog/sc-bad-arg.c
        src/tests/userprog/sc-bad-sp.c
        src/tests/userprog/sc-boundary-2.c
        src/tests/userprog/sc-boundary.c
        src/tests/userprog/wait-bad-pid.c
        src/tests/userprog/wait-killed.c
        src/tests/userprog/wait-simple.c
        src/tests/userprog/wait-twice.c
        src/tests/userprog/write-bad-fd.c
        src/tests/userprog/write-bad-ptr.c
        src/tests/userprog/write-boundary.c
        src/tests/userprog/write-normal.c
        src/tests/userprog/write-stdin.c
        src/tests/userprog/write-zero.c
        src/tests/vm/child-inherit.c
        src/tests/vm/child-linear.c
        src/tests/vm/child-mm-wrt.c
        src/tests/vm/child-qsort-mm.c
        src/tests/vm/child-qsort.c
        src/tests/vm/child-sort.c
        src/tests/vm/mmap-bad-fd.c
        src/tests/vm/mmap-clean.c
        src/tests/vm/mmap-close.c
        src/tests/vm/mmap-exit.c
        src/tests/vm/mmap-inherit.c
        src/tests/vm/mmap-misalign.c
        src/tests/vm/mmap-null.c
        src/tests/vm/mmap-over-code.c
        src/tests/vm/mmap-over-data.c
        src/tests/vm/mmap-over-stk.c
        src/tests/vm/mmap-overlap.c
        src/tests/vm/mmap-read.c
        src/tests/vm/mmap-remove.c
        src/tests/vm/mmap-shuffle.c
        src/tests/vm/mmap-twice.c
        src/tests/vm/mmap-unmap.c
        src/tests/vm/mmap-write.c
        src/tests/vm/mmap-zero.c
        src/tests/vm/page-linear.c
        src/tests/vm/page-merge-mm.c
        src/tests/vm/page-merge-par.c
        src/tests/vm/page-merge-seq.c
        src/tests/vm/page-merge-stk.c
        src/tests/vm/page-parallel.c
        src/tests/vm/page-shuffle.c
        src/tests/vm/parallel-merge.c
        src/tests/vm/parallel-merge.h
        src/tests/vm/pt-bad-addr.c
        src/tests/vm/pt-bad-read.c
        src/tests/vm/pt-big-stk-obj.c
        src/tests/vm/pt-grow-bad.c
        src/tests/vm/pt-grow-pusha.c
        src/tests/vm/pt-grow-stack.c
        src/tests/vm/pt-grow-stk-sc.c
        src/tests/vm/pt-write-code-2.c
        src/tests/vm/pt-write-code.c
        src/tests/vm/qsort.c
        src/tests/vm/qsort.h
        src/tests/arc4.c
        src/tests/arc4.h
        src/tests/cksum.c
        src/tests/cksum.h
        src/tests/lib.c
        src/tests/lib.h
        src/tests/main.c
        src/tests/main.h
        src/threads/flags.h
        src/threads/init.c
        src/threads/init.h
        src/threads/interrupt.c
        src/threads/interrupt.h
        src/threads/intr-stubs.h
        src/threads/io.h
        src/threads/loader.h
        src/threads/malloc.c
        src/threads/malloc.h
        src/threads/palloc.c
        src/threads/palloc.h
        src/threads/pte.h
        src/threads/switch.h
        src/threads/synch.c
        src/threads/synch.h
        src/threads/thread.c
        src/threads/thread.h
        src/threads/vaddr.h
        src/userprog/exception.c
        src/userprog/exception.h
        src/userprog/gdt.c
        src/userprog/gdt.h
        src/userprog/pagedir.c
        src/userprog/pagedir.h
        src/userprog/process.c
        src/userprog/process.h
        src/userprog/syscall.c
        src/userprog/syscall.h
        src/userprog/tss.c
        src/userprog/tss.h
        src/utils/setitimer-helper.c
        src/utils/squish-pty.c
        src/utils/squish-unix.c
        src/vm/frame.c
        src/vm/frame.h
        src/vm/page.c
        src/vm/page.h
        src/vm/swap.c
        src/vm/swap.h
        src/.gitignore
        src/LICENSE
        src/Make.config
        src/Makefile
        src/Makefile.build
        src/Makefile.kernel
        src/Makefile.userprog)
